[gd_scene load_steps=14 format=3 uid="uid://r4r0htvmigi7"]

[ext_resource type="Script" path="res://Skripte/Portal_Goal.gd" id="1_is72j"]
[ext_resource type="Texture2D" uid="uid://1348m73h5dmf" path="res://Sprites/Purple Portal Sprite Sheet.png" id="1_r48gw"]
[ext_resource type="Texture2D" uid="uid://i27uu7r1trh1" path="res://Sprites/Arrow.png" id="3_e0dqs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_veugf"]
atlas = ExtResource("1_r48gw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_arxca"]
atlas = ExtResource("1_r48gw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xnia"]
atlas = ExtResource("1_r48gw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_otuqm"]
atlas = ExtResource("1_r48gw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7c71"]
atlas = ExtResource("1_r48gw")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb2ms"]
atlas = ExtResource("1_r48gw")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro37i"]
atlas = ExtResource("1_r48gw")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36aif"]
atlas = ExtResource("1_r48gw")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0ijs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_veugf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arxca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xnia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otuqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7c71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb2ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro37i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36aif")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0pjmw"]
radius = 24.0
height = 196.0

[node name="Portal" type="Area2D"]
script = ExtResource("1_is72j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.99976, -11)
scale = Vector2(3.48438, 4.63281)
sprite_frames = SubResource("SpriteFrames_q0ijs")
autoplay = "default"
frame_progress = 0.19965
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_0pjmw")

[node name="ArrowUp" type="TextureRect" parent="."]
visible = false
offset_left = -40.0
offset_top = -155.0
offset_right = 216.0
offset_bottom = 101.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_e0dqs")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
